--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@
      position: relative;
      border-left: 6px solid #004aad;
      border-radius: 12px;
-     background: #f6faff;
+     background: transparent;
      padding: 30px 35px 45px;
      margin: 40px auto 30px;
      text-align: left;
